Make font-size:larger and font-size:smaller smarter about interpolating and extrapolating font sizes.  Bug 72164, patch by Eric Lawrence <elawrenc69@yahoo.com>, r=bzbarsky, r+sr=dbaron, a=asa